--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                     <i class="fas fa-graduation-cap"></i>
                 </div>
                 <div class="logo-text">
-                    <h1 style="font-size: 1.2rem;">FAITH Junior</h1>
+                    <h1 style="font-size: 1.2rem;">Faith Junior</h1>
                 </div>
             </div>
             <button class="mobile-menu-btn" id="mobileMenuClose">
@@ -773,7 +773,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Shaping Future <span>Leaders</span></h1>
-                    <p class="hero-subtitle">At FAITH Junior Academy, we provide a holistic education that combines academic excellence with character development, preparing students for success in the 21st century.</p>
+                    <p class="hero-subtitle">At Faith Junior Academy, we provide a holistic education that combines academic excellence with character development, preparing students for success in the 21st century.</p>
                     
                     <div class="hero-buttons">
                         <a href="#inquiry" class="btn">
@@ -855,7 +855,7 @@
     <section id="about">
         <div class="container">
             <div class="section-title">
-                <h2>Why Choose FAITH Junior</h2>
+                <h2>Why Choose Faith Junior</h2>
                 <p>Discover what sets us apart in providing quality education</p>
             </div>
             
@@ -1044,7 +1044,7 @@
                             <i class="fas fa-graduation-cap"></i>
                         </div>
                         <div class="logo-text">
-                            <h1 style="color: white; font-size: 1.2rem;">FAITH Junior Academy</h1>
+                            <h1 style="color: white; font-size: 1.2rem;">Faith Junior Academy</h1>
                             <p style="color: rgba(255, 255, 255, 0.7);">Quality Education Since 2010</p>
                         </div>
                     </div>
