--- a/index.html
+++ b/index.html
@@ -1117,8 +1117,8 @@
     
     <!-- Desktop Navigation -->
     <nav class="desktop-nav">
-      <a href="#home" class="nav-item">Home</a>
-      <a href="#values" class="nav-item">Values</a>
+      <a href="index.html" class="nav-item">Home</a>
+      <a href="about.html" class="nav-item">About</a>
       <a href="#programs" class="nav-item">Programs</a>
       <a href="#admissions" class="nav-item">Admissions</a>
       <a href="#contact" class="nav-item">Contact</a>
