--- a/about.html
+++ b/about.html
@@ -1261,7 +1261,7 @@
     <nav class="desktop-nav">
       <a href="index.html" class="nav-item">Home</a>
       <a href="about.html" class="nav-item">About</a>
-      <a href="#journey" class="nav-item">Our Journey</a>
+      <a href="program.html" class="nav-item">Program</a>
       <a href="#philosophy" class="nav-item">Philosophy</a>
       <a href="#environment" class="nav-item">Learning Spaces</a>
       <a href="index.html#inquiry" class="nav-cta">
@@ -1286,13 +1286,13 @@
         <i class="fas fa-home"></i>
         <span>Home</span>
       </a>
-      <a href="#mission" class="mobile-nav-link">
+      <a href="about.html" class="mobile-nav-link">
         <i class="fas fa-bullseye"></i>
-        <span>Mission & Vision</span>
+        <span>About.html</span>
       </a>
-      <a href="#journey" class="mobile-nav-link">
+      <a href="program.html" class="mobile-nav-link">
         <i class="fas fa-history"></i>
-        <span>Our Journey</span>
+        <span>program.html</span>
       </a>
       <a href="#philosophy" class="mobile-nav-link">
         <i class="fas fa-brain"></i>
