--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
     <nav class="desktop-nav">
       <a href="index.html" class="nav-item">Home</a>
       <a href="about.html" class="nav-item">About</a>
-      <a href="#programs" class="nav-item">Programs</a>
+      <a href="program.html" class="nav-item">Program</a>
       <a href="#admissions" class="nav-item">Admissions</a>
       <a href="#contact" class="nav-item">Contact</a>
       <a href="#inquiry" class="nav-cta">
