updates new page

--- a/about.html
+++ b/about.html
@@ -1262,7 +1262,7 @@
       <a href="index.html" class="nav-item">Home</a>
       <a href="about.html" class="nav-item">About</a>
       <a href="program.html" class="nav-item">Program</a>
-      <a href="#philosophy" class="nav-item">Philosophy</a>
+      <a href="admission.html" class="nav-item">admission</a>
       <a href="#environment" class="nav-item">Learning Spaces</a>
       <a href="index.html#inquiry" class="nav-cta">
         <i class="fas fa-paper-plane"></i>
@@ -1294,9 +1294,9 @@
         <i class="fas fa-history"></i>
         <span>program.html</span>
       </a>
-      <a href="#philosophy" class="mobile-nav-link">
+      <a href="admission.html" class="mobile-nav-link">
         <i class="fas fa-brain"></i>
-        <span>Educational Philosophy</span>
+        <span>Admissions</span>
       </a>
       <a href="#environment" class="mobile-nav-link">
         <i class="fas fa-school"></i>
