--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,7 @@
       <a href="index.html" class="nav-item">Home</a>
       <a href="about.html" class="nav-item">About</a>
       <a href="program.html" class="nav-item">Program</a>
-      <a href="#admissions" class="nav-item">Admissions</a>
+      <a href="admission.html" class="nav-item">Admissions</a>
       <a href="#contact" class="nav-item">Contact</a>
       <a href="#inquiry" class="nav-cta">
         <i class="fas fa-paper-plane"></i>
@@ -1140,19 +1140,19 @@
   <!-- Mobile Navigation -->
   <div class="mobile-nav" id="mobileNav">
     <div class="mobile-nav-links">
-      <a href="#home" class="mobile-nav-link">
+      <a href="index.html" class="mobile-nav-link">
         <i class="fas fa-home"></i>
         <span>Home</span>
       </a>
-      <a href="#values" class="mobile-nav-link">
+      <a href="about.html" class="mobile-nav-link">
         <i class="fas fa-heart"></i>
         <span>Our Values</span>
       </a>
-      <a href="#programs" class="mobile-nav-link">
+      <a href="program.html" class="mobile-nav-link">
         <i class="fas fa-graduation-cap"></i>
         <span>Programs</span>
       </a>
-      <a href="#admissions" class="mobile-nav-link">
+      <a href="admission.html" class="mobile-nav-link">
         <i class="fas fa-calendar-alt"></i>
         <span>Admissions</span>
       </a>
