--- a/program.html
+++ b/program.html
@@ -1205,7 +1205,7 @@
       <a href="index.html" class="nav-item">Home</a>
       <a href="about.html" class="nav-item">About</a>
       <a href="program.html" class="nav-item">Programs</a>
-      <a href="#levels" class="nav-item">Grade Levels</a>
+      <a href="admission.html" class="nav-item">Admissions</a>
       <a href="#parental" class="nav-item">Parental Role</a>
       <a href="index.html#inquiry" class="nav-cta">
         <i class="fas fa-paper-plane"></i>
@@ -1237,9 +1237,9 @@
         <i class="fas fa-book-open"></i>
         <span>CBC Overview</span>
       </a>
-      <a href="#levels" class="mobile-nav-link">
+      <a href="admission.htm;" class="mobile-nav-link">
         <i class="fas fa-graduation-cap"></i>
-        <span>Grade Levels</span>
+        <span>Admission</span>
       </a>
       <a href="#parental" class="mobile-nav-link">
         <i class="fas fa-users"></i>
