--- a/admission.html
+++ b/admission.html
@@ -2072,7 +2072,7 @@
         <i class="fas fa-info-circle"></i>
         <span>About Us</span>
       </a>
-      <a href="programs.html" class="mobile-nav-link">
+      <a href="program.html" class="mobile-nav-link">
         <i class="fas fa-graduation-cap"></i>
         <span>Programs</span>
       </a>
