--- a/admission.html
+++ b/admission.html
@@ -2043,7 +2043,7 @@
     <nav class="desktop-nav">
       <a href="index.html" class="nav-item">Home</a>
       <a href="about.html" class="nav-item">About</a>
-      <a href="programs.html" class="nav-item">Programs</a>
+      <a href="program.html" class="nav-item">Programs</a>
       <a href="admission.html" class="nav-item">Admissions</a>
       <a href="#fees" class="nav-item">Fees</a>
       <a href="#apply" class="nav-cta">
