--- a/program.html
+++ b/program.html
@@ -1253,7 +1253,7 @@
     
     <a href="index.html#inquiry" class="mobile-nav-cta">
       <i class="fas fa-paper-plane"></i>
-      Enroll Now
+      Apply Now
     </a>
   </div>
 
