--- a/about.html
+++ b/about.html
@@ -1263,8 +1263,8 @@
       <a href="about.html" class="nav-item">About</a>
       <a href="program.html" class="nav-item">Program</a>
       <a href="admission.html" class="nav-item">admission</a>
-      <a href="#environment" class="nav-item">Learning Spaces</a>
-      <a href="index.html#inquiry" class="nav-cta">
+      <a href="contact.html" class="nav-item">Contact</a>
+      <a href="index.html" class="nav-cta">
         <i class="fas fa-paper-plane"></i>
         Apply Now
       </a>
@@ -1298,9 +1298,9 @@
         <i class="fas fa-brain"></i>
         <span>Admissions</span>
       </a>
-      <a href="#environment" class="mobile-nav-link">
+      <a href="contact.html" class="mobile-nav-link">
         <i class="fas fa-school"></i>
-        <span>Learning Spaces</span>
+        <span>Contact</span>
       </a>
       <a href="index.html#inquiry" class="mobile-nav-link">
         <i class="fas fa-calendar-alt"></i>
