--- a/admission.html
+++ b/admission.html
@@ -189,7 +189,7 @@
       color: var(--dark);
       opacity: 0.7;
     }  
-    
+
     /* Desktop Navigation */
     .desktop-nav {
       display: flex;
@@ -2043,10 +2043,9 @@
     <nav class="desktop-nav">
       <a href="index.html" class="nav-item">Home</a>
       <a href="about.html" class="nav-item">About</a>
-      <a href="program.html" class="nav-item">Programs</a>
-      <a href="admission.html" class="nav-item">Admissions</a>
-      <a href="#fees" class="nav-item">Fees</a>
-      <a href="#apply" class="nav-cta">
+      <a href="program.html" class="nav-item">Program</a>
+      <a href="admission.html" class="nav-item">Contact</a>
+      <a href="admission.html" class="nav-cta">
         <i class="fas fa-paper-plane"></i>
         Apply Now
       </a>
@@ -2080,17 +2079,9 @@
         <i class="fas fa-list-ol"></i>
         <span>Admissions</span>
       </a>
-      <a href="#requirements" class="mobile-nav-link">
+      <a href="contact.html" class="mobile-nav-link">
         <i class="fas fa-file-alt"></i>
-        <span>Requirements</span>
-      </a>
-      <a href="#fees" class="mobile-nav-link">
-        <i class="fas fa-money-bill-wave"></i>
-        <span>Fees & Payment</span>
-      </a>
-      <a href="#dates" class="mobile-nav-link">
-        <i class="fas fa-calendar-alt"></i>
-        <span>Important Dates</span>
+        <span>Contact</span>
       </a>
     </div>
     
