--- a/index.html
+++ b/index.html
@@ -1121,8 +1121,8 @@
       <a href="about.html" class="nav-item">About</a>
       <a href="program.html" class="nav-item">Program</a>
       <a href="admission.html" class="nav-item">Admissions</a>
-      <a href="#contact" class="nav-item">Contact</a>
-      <a href="#inquiry" class="nav-cta">
+      <a href="contact.html" class="nav-item">Contact</a>
+      <a href="admission.html" class="nav-cta">
         <i class="fas fa-paper-plane"></i>
         Apply Now
       </a>
@@ -1156,7 +1156,7 @@
         <i class="fas fa-calendar-alt"></i>
         <span>Admissions</span>
       </a>
-      <a href="#contact" class="mobile-nav-link">
+      <a href="contact.html" class="mobile-nav-link">
         <i class="fas fa-phone"></i>
         <span>Contact</span>
       </a>
