--- a/program.html
+++ b/program.html
@@ -1206,7 +1206,7 @@
       <a href="about.html" class="nav-item">About</a>
       <a href="program.html" class="nav-item">Programs</a>
       <a href="admission.html" class="nav-item">Admissions</a>
-      <a href="#parental" class="nav-item">Parental Role</a>
+      <a href="#parental" class="nav-item">Contact</a>
       <a href="index.html#inquiry" class="nav-cta">
         <i class="fas fa-paper-plane"></i>
         Enroll Now
@@ -1241,17 +1241,17 @@
         <i class="fas fa-graduation-cap"></i>
         <span>Admission</span>
       </a>
-      <a href="#parental" class="mobile-nav-link">
+      <a href="contact.html" class="mobile-nav-link">
         <i class="fas fa-users"></i>
-        <span>Parental Role</span>
+        <span>Contact</span>
       </a>
-      <a href="#assessment" class="mobile-nav-link">
+      <!-- <a href="#assessment" class="mobile-nav-link">
         <i class="fas fa-chart-line"></i>
         <span>Assessment</span>
-      </a>
+      </a> -->
     </div>
     
-    <a href="index.html#inquiry" class="mobile-nav-cta">
+    <a href="admission.html" class="mobile-nav-cta">
       <i class="fas fa-paper-plane"></i>
       Apply Now
     </a>
