--- a/about.html
+++ b/about.html
@@ -215,6 +215,11 @@
       transform: translateY(-3px);
       box-shadow: 0 8px 20px rgba(30, 64, 175, 0.4);
     }
+      .nav-item.active {
+        background: var(--accent);
+        border-radius: 8px;
+        padding: 0.6rem 1rem;
+    }
     .mobile-menu-btn {
       display: none;
       background: none;
@@ -1030,7 +1035,7 @@
     </a>
     <nav class="desktop-nav">
       <a href="index.html" class="nav-item">Home</a>
-      <a href="about.html" class="nav-item">About</a>
+      <a href="about.html" class="nav-item active">About</a>
       <a href="program.html" class="nav-item">Program</a>
       <a href="admission.html" class="nav-item">admission</a>
       <a href="contact.html" class="nav-item">Contact</a>
