--- a/admission.html
+++ b/admission.html
@@ -283,6 +283,12 @@
       opacity: 1;
       visibility: visible;
     }
+
+      .mobile-nav-item.active {
+        background: var(--accent);
+        border-radius: 8px;
+        padding: 0.6rem 1rem;
+}
     
     /* Mobile Navigation */
     .mobile-nav {
@@ -2081,7 +2087,7 @@
         <i class="fas fa-graduation-cap"></i>
         <span>Programs</span>
       </a>
-      <a href="admission.html" class="mobile-nav-link">
+      <a href="admission.html" class="mobile-nav-link active">
         <i class="fas fa-list-ol"></i>
         <span>Admissions</span>
       </a>
