--- a/contact.html
+++ b/contact.html
@@ -249,6 +249,11 @@
       transform: translateY(-3px);
       box-shadow: 0 8px 20px rgba(5, 150, 105, 0.4);
     }
+    .nav-item.active {
+        background: var(--accent);
+        border-radius: 8px;
+        padding: 0.6rem 1rem;
+    }
     
     /* Mobile Menu Button */
     .mobile-menu-btn {
@@ -1478,7 +1483,7 @@
       <a href="about.html" class="nav-item">About</a>
       <a href="programs.html" class="nav-item">Programs</a>
       <a href="admission.html" class="nav-item">Admissions</a>
-      <a href="contact.html" class="nav-item">Contact</a>
+      <a href="contact.html" class="nav-item active">Contact</a>
       <a href="admission.html" class="nav-cta">
         <i class="fas fa-paper-plane"></i>
         Apply Now
