--- a/program.html
+++ b/program.html
@@ -284,6 +284,12 @@
       border-color: rgba(30, 64, 175, 0.1);
       transform: translateX(-5px);
     }
+      .nav-item.active {
+        background: var(--accent);
+        border-radius: 8px;
+        padding: 0.6rem 1rem;
+    }
+    
     .mobile-nav-link i {
       color: var(--primary);
       font-size: 1.2rem;
@@ -1041,7 +1047,7 @@
     <nav class="desktop-nav">
       <a href="index.html" class="nav-item">Home</a>
       <a href="about.html" class="nav-item">About</a>
-      <a href="program.html" class="nav-item">Programs</a>
+      <a href="program.html" class="nav-item active">Programs</a>
       <a href="admission.html" class="nav-item">Admissions</a>
       <a href="contact.html" class="nav-item">Contact</a>
       <a href="admission.html" class="nav-cta">
