--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
       transform: translateY(-3px);
       box-shadow: 0 8px 20px rgba(30, 64, 175, 0.4);
     }
+      .nav-item.active {
+        background: var(--accent);
+        border-radius: 8px;
+        padding: 0.6rem 1rem;
+    }
     /* Mobile Menu Button */
     .mobile-menu-btn {
       display: none;
@@ -970,7 +975,7 @@
     </a>
     <!-- Desktop Navigation -->
     <nav class="desktop-nav">
-      <a href="index.html" class="nav-item">Home</a>
+      <a href="index.html" class="nav-item active">Home</a>
       <a href="about.html" class="nav-item">About</a>
       <a href="program.html" class="nav-item">Program</a>
       <a href="admission.html" class="nav-item">Admissions</a>
